var, const e short decl funcionando
Co-authored-by: Rogério Medeiros <RogerioMSantos@users.noreply.github.com>